@@ -40,11 +40,33 @@ feature 'Users', feature: true do
     expect(number_of_errors_on_page(page)).to be(1), 'errors on page:\n #{errors_on_page page}'
   end
 
+  describe 'redirect alias routes' do
+    before { user }
+
+    scenario '/u/user1 redirects to user page' do
+      visit '/u/user1'
+
+      expect_user_show_page
+    end
+
+
+    scenario '/users/user1 redirects to user page' do
+      visit '/users/user1'
+
+      expect_user_show_page
+    end
+  end
+
   def errors_on_page(page)
     page.find('#error_explanation').find('ul').all('li').map{ |item| item.text }.join("\n")
   end
 
   def number_of_errors_on_page(page)
     page.find('#error_explanation').find('ul').all('li').count
+  end
+
+  def expect_user_show_page
+    expect(current_path).to eq user_path(user)
+    expect(page).to have_text(user.name)
   end
 end
